<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        app:cardCornerRadius="3dp"
        app:cardElevation="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/global_stats"
                android:layout_gravity="center_horizontal"
                android:textSize="18sp"
                android:padding="3dp"
                android:textColor="@android:color/black"/>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cases"
                        android:padding="3dp"
                        android:textSize="15sp"
                        android:textAlignment="center"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/worldCases"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/number_of_cases"
                        android:textAlignment="center"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/blue"
                        android:textSize="12sp"
                        android:padding="3dp"/>

                </LinearLayout> <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/recovered"
                        android:padding="3dp"
                        android:textSize="15sp"
                        android:textAlignment="center"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/worldRecovered"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/number_of_recovered"
                        android:textAlignment="center"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/green"
                        android:textSize="12sp"
                        android:padding="3dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/deaths"
                        android:padding="3dp"
                        android:textSize="15sp"
                        android:textAlignment="center"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/worldDeaths"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/number_of_deaths"
                        android:textAlignment="center"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/red"
                        android:textSize="12sp"
                        android:padding="3dp"/>

                </LinearLayout>





            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView><androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        app:cardCornerRadius="3dp"
        app:cardElevation="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/indian_stats"
                android:layout_gravity="center_horizontal"
                android:textSize="18sp"
                android:padding="3dp"
                android:textColor="@android:color/black"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cases"
                        android:padding="3dp"
                        android:textSize="15sp"
                        android:textAlignment="center"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/indiaCases"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/number_of_cases"
                        android:textAlignment="center"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/blue"
                        android:textSize="12sp"
                        android:padding="3dp"/>

                </LinearLayout> <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/recovered"
                        android:padding="3dp"
                        android:textSize="15sp"
                        android:textAlignment="center"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/indiaRecovered"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/number_of_recovered"
                        android:textAlignment="center"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/green"
                        android:textSize="12sp"
                        android:padding="3dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/deaths"
                        android:padding="3dp"
                        android:textSize="15sp"
                        android:textAlignment="center"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/indiaDeaths"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/number_of_deaths"
                        android:textAlignment="center"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/red"
                        android:textSize="12sp"
                        android:padding="3dp"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/stateStats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/state_items"
        android:layout_marginTop="5dp"/>

</LinearLayout>